<resources>
    <string name="app_name">Swap</string>
    <string name="api_key" translatable="false">AIzaSyBty6htocQZVbjnN-Aga0WpR-UHwcmM_1Q</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_item">Add item</string>
    <string name="menu_map">Map</string>
    <string name="menu_recommendations">Recommendations</string>
    <string name="menu_history">History</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_language">Change language</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="exchanges">Swaps</string>
    <string name="donations">Donations</string>
    <string name="donation_made">Donation made</string>
    <string name="donation_received">Donation received</string>
    <string name="add_item_button_home">Add item button from home</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="items">item(s)</string>
    <string name="sort_new"> New to old </string>
    <string name="sort_old"> Old to new </string>
    <string name="sort_alphabetical"> Alphabetical order: A-Z </string>
    <string name="sort_alphabetical_reversed"> Alphabetical order: Z-A  </string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="categories"><u>Categories</u></string>
    <string name="categories_no_underline">Categories</string>
    <string name="categ_accessories">Accessories</string>
    <string name="categ_appliances">Appliances</string>
    <string name="categ_beauty">Beauty</string>
    <string name="categ_clothesshoes">Clothes &amp; Shoes</string>
    <string name="categ_devices">Devices</string>
    <string name="categ_home_decor">Home decor</string>
    <string name="categ_jewelry">Jewelry</string>
    <string name="categ_education">Education</string>
    <string name="categ_fooddrink">Food &amp; Drink</string>
    <string name="categ_furniture">Furniture</string>
    <string name="categ_games">Games</string>
    <string name="categ_garden">Garden</string>
    <string name="categ_medical">Medical</string>
    <string name="not_found">Not found</string>
    <string name="ok">OK</string>
    <string name="exchange">Swap</string>
    <string name="donate">Donate</string>
    <string name="exchange_purpose">Swap</string>
    <string name="donate_purpose">Donate</string>
    <string name="for_exchange">For swapping</string>
    <string name="for_donate">For donation</string>
    <string name="make_exchange">Swap</string>
    <string name="get_donation">Get donation</string>
    <string name="invalid_fields">Invalid fields!</string>
    <string name="item_title_short">At least 3 characters required</string>
    <string name="item_description_short">At least 5 characters required</string>
    <string name="required">Required</string>
    <string name="description">Description</string>
    <string name="purpose">Purpose</string>
    <string name="question_add_item_preferences">What category of objects would you like to make swap for?</string>
    <string name="category">Category</string>
    <string name="photos_min_2">Photos (min. 2)</string>
    <string name="location">Location</string>
    <string name="change_location">Change location</string>
    <string name="other_details">Other details</string>
    <string name="manufacture_year">Manufacture year</string>
    <string name="condition">Condition</string>
    <string name="save">Save</string>
    <string name="select_on_map">Select on map</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="item_title">Item title</string>
    <string name="select_photo">Select photo from:</string>
    <string name="infoPhotos">We recommend that you upload at least 2 different photos so others can see the particularities of your item. Also, make sure that those pictures are made in good lighting and capture the relevant details of the product (including defects).</string>
    <string name="infoLocation">The location you choose will be displayed in the item\'s page
        and in the map page. This helps other users acknowledge the item\'s location for pick-up
        meetings. Note that you should not give the exact location, but an approximate one, for security reasons.</string>
    <string name="new_like_new">New/Like new</string>
    <string name="used">Used</string>
    <string name="not_working">For parts or not working</string>
    <string name="unknown">Unknown</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_item">Add item</string>
    <string name="mapPageTitle">Map</string>
    <string name="titleLocationPermission">Location permission needed</string>
    <string name="messageLocationPermission">"The location permission is required so that you can see items around you in real time! "</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name_register">Full name</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="account_exists_already">Email already used for another account!</string>
    <string name="something_failed">Something went wrong. Please try again!</string>
    <string name="email_required">Email is required</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="name_required">Full name is required</string>
    <string name="name_invalid">First name and last name are required</string>
    <string name="pass_required">Password is required</string>
    <string name="pass_invalid">Should have minimum 8 characters, at least 1 uppercase letter,
        1 lowercase letter and 1 number</string>
    <string name="pass_confirmed_required">Password confirmation is required</string>
    <string name="pass_confirmed_invalid">Passwords are not identical</string>
    <string name="intro1_title">Add items</string>
    <string name="intro1_content">You can add as many items as you want, so that other users can see and reach you if they want to swap something or receive donation.</string>
    <string name="intro2_title">Personal recommendations</string>
    <string name="intro2_content">Based on your preferences we will look for the best matches so you can enjoy them in the Recommendations section.</string>
    <string name="intro3_title">Items around you</string>
    <string name="intro3_content">Use the live map to see what others have for swapping or donation.</string>
    <string name="pass_or_email_invalid">Email or password is wrong!</string>
    <string name="user_deleted_or_disabled">This user does not exist or was disabled/deleted by the administrator!</string>
    <string name="help">Help</string>
    <string name="authentication">Authentication</string>
    <string name="profile">Profile</string>
    <string name="log_in_register">Log in / Register</string>
    <string name="you">You</string>
    <string name="location_chosen">Location chosen</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="continue_with">Continue with</string>
    <string name="item">Item</string>
    <string name="choose_location">Choose location</string>
    <string name="send_message">Send message</string>
    <string name="loading">Loading</string>
    <string name="notifications">Notifications</string>
    <string name="preferences_for_recommendations">Preferences for recommendations</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="edit_notifications">Edit notifications</string>
    <string name="edit_preferences">Edit preferences</string>
    <string name="words_preferences_description">Items that contain at least one of these words in their name or description.</string>
    <string name="words">Words</string>
    <string name="exchange_preferences">Swapping preferences</string>
    <string name="owners_preferences_description">Items that are posted by one of these owners.</string>
    <string name="categories_preferences_description">Items that fall under one of these categories.</string>
    <string name="cities_preferences_description">Items that are located in one of these cities.</string>
    <string name="exchange_preferences_description">Items for which the owner wants to swap for an object from one of these categories</string>
    <string name="no_items_favorites">Nothing... \n Tap ♡ in an item\'s page and you will have it saved here.</string>
    <string name="no_items_recommendations">Nothing... \n Customize your preferences in the dedicated page from profile section.</string>
    <string name="old_password">Old password</string>
    <string name="select_from_gallery_2_rows">Select from \n gallery</string>
    <string name="profile_photo">Profile photo</string>
    <string name="new_password">New password</string>
    <string name="old_pass_invalid">Invalid password!</string>
    <string name="owners">Owners</string>
    <string name="owners_autocomplete">Search for a name</string>
    <string name="city_autocomplete">e.g. Bucuresti</string>
    <string name="words_autocomplete">e.g. table</string>
    <string name="edit_preferences_description">Based on your preferences you will see the corresponding items in your Recommendations page and receive notifications for them (if turned on).</string>
    <string name="report_post">Report post</string>
    <string name="item_deleted_successfully">Item deleted successfully!</string>
    <string name="item_deleted_failed">Item could not be deleted. Please try again in a few minutes!</string>
    <string name="delete_item_message_dialog">Are you sure you want to delete this post?</string>
    <string name="delete_item_title_dialog">Delete item</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="no_items_given">Nothing... Come back after you swap or donate something.</string>
    <string name="no_items_available">Nothing... Seems like you did a good job in finding your items a new home.</string>
    <string name="events">event(s)</string>
    <string name="no_unavailable_items">None... Message other users to swap your items or receive a donation. Or maybe make a donation?</string>
    <string name="all_items_available">All items available</string>
    <string name="none">None</string>
    <string name="sent_proposal">sent you a proposal</string>
    <string name="sent_photo">sent you a photo</string>
    <string name="sent_message">sent you a message</string>
    <string name="choose_item">Choose an item</string>
    <string name="must_choose_item">You must choose an item to continue!</string>
    <string name="no_items_for_proposal">No items to swap for.</string>
    <string name="you_sent_a_proposal">you sent a proposal</string>
    <string name="you_sent_photo">you sent a photo</string>
    <string name="proposal">"Proposal"</string>
    <string name="on">on</string>
    <string name="explanation">Explanation</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_description">Tell us if you have a problem or there is something we could have done better.</string>
    <string name="feedback_sent">Thank you! \n We will analyze your feedback and contact you via email if we need additional information.</string>
</resources>