<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.diana.bachelorthesis.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_item"
            app:destination="@id/nav_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_item"
        android:name="com.diana.bachelorthesis.view.AddItemFragment"
        android:label="@string/menu_add_item"
        tools:layout= "@layout/fragment_add_item" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.diana.bachelorthesis.view.MapFragment"
        android:label="@string/menu_map"
        tools:layout= "@layout/fragment_map" />
    <fragment
        android:id="@+id/nav_recommendations"
        android:name="com.diana.bachelorthesis.view.RecommendationsFragment"
        android:label="@string/menu_recommendations"
        tools:layout= "@layout/fragment_recommendations" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.diana.bachelorthesis.view.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout= "@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.diana.bachelorthesis.view.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout= "@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.diana.bachelorthesis.view.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout= "@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_intro_auth"
        android:name="com.diana.bachelorthesis.view.IntroAuthFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_intro_auth" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.diana.bachelorthesis.view.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_register"
        android:name="com.diana.bachelorthesis.view.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.diana.bachelorthesis.view.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
<!--        <action-->
<!--            android:id="@+id/action_nav_profile_to_nav_home"-->
<!--            app:destination="@id/nav_home"-->
<!--            app:popUpTo="@+id/nav_graph"-->
<!--            app:popUpToInclusive="true"/>-->
    </fragment>
    <fragment
        android:id="@+id/nav_item"
        android:name="com.diana.bachelorthesis.view.ItemFragment"
        android:label="@string/item"
        tools:layout="@layout/fragment_item">
    <argument
        android:name="ItemClicked"
        app:argType="com.diana.bachelorthesis.model.Item" />
    </fragment>


</navigation>