<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_layout_dialog"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.SortDialogFragment">

    <TextView
        android:id="@+id/sort_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/sort"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sort_radio_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sort_title"
        tools:layout_editor_absoluteX="10dp">

        <RadioButton
            android:id="@+id/radio_sort_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_new"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_sort_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_old"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_sort_az"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_alphabetical"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_sort_za"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_alphabetical_reversed"
            android:textColor="@color/black" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sort_radio_buttons"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/sort_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <!-- Dummy view for correct spacing -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sort_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small"
            android:text="@string/apply"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>